# py.gpt.prompt

./: .eslintrc.js  .flake8  .gitignore  .gitmodules  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.sample.json  main.py  mkdocs.yml  pyproject.toml  requirements.txt
config/: llama_cpp.json  model.json  prompts.json  setting.json
config/model/: choices.json  function.json  llama.json  system_prompt.json
docs/: configuration.md  download.md  features.md  huggingface_hub.md  index.md  prompt.md  quantization.md  quickstart.md
docs/diagrams/: README.md
docs/diagrams/mermaid/: chat_session.mmd  settings.mmd
docs/diagrams/plantuml/: ChatModel.puml  ChatSession.puml  ConfigurationManager.puml  JSONTemplate.puml  SequenceManagement.puml  SequenceManager.puml  chat_message_handler.puml  chat_model.puml  chat_model_factory.puml  chat_session.puml  chat_session_init.puml  configuration_manager.puml  context_transcript_managers.puml  json_handler.puml  json_interface.puml  json_manager.puml  mapping_interface.puml  mapping_templates.puml  session_management.puml  session_manager.puml  session_queue.puml  token_manager.puml  vector_store_manager.puml
docs/install/: developer.md  llama.cpp.md  user.md
docs/mermaid/: chat_sequence.mmd  llama.cpp.gpu.mmd  overview.mmd  settings.mmd
docs/model_cards/: orca-mini.md  questionnaire.md
docs/models/orca_mini/: notes.md  overview.md
docs/notebooks/: augmented_model_memory.ipynb  function_api.ipynb  generate_function_schema.ipynb  genesis_model_target.ipynb  llama_cpp_function_api.ipynb  llama_cpp_grammar_api.ipynb  openai_function_api.ipynb  poc_llama_function_calling.py  poc_openai_function_calling.py
docs/notes/: orca-mini.md
docs/prompting/: guide.md
docs/prompting/questionnaires/: general.md
docs/questionnaires/: programming.md
docs/reference/api/: llama_cpp.md  openai.md
docs/reference/config/: json.md  manager.md  path.md
docs/research/: LICENSE.md  alignment.md  derailment.md  genesis.md  hallucination.md  identity.md  memory.md  phi-1.md
docs/research/phi-1/: complex_expressions.md  ethics_and_emotions.md  outline.md  phichat.md  planning.md
prompts/: sample.session.txt
prompts/goals/: demonstration.txt  memory.txt  prompt-toolkit.txt
pygptprompt/: __init__.py  chat.py  command.py  config.py  convert.py  download.py  embed.py  fn.py  format.py  function.py  ggml.py  gpt.py  ingest.py  llama.py  main.py  ocr.py  openai.py  pdf.py  policy.py  quantize.py  queue.py  scan.py  session.py  token.py
pygptprompt/api/: base.py  factory.py  llama.py  llama_cpp.py  openai.py  types.py
pygptprompt/api/ggml/: requests.py
pygptprompt/api/openai/: __init__.py  completions.py  model.py  requests.py
pygptprompt/chat/: __init__.py  assistant.py  context.py  interpreter.py  model.py  policy.py  queue.py  session.py  token.py  user.py
pygptprompt/cli/: chat.py  convert.py  convert_fast.py  download.py  dump_gguf.py  dump_torch.py  embed.py  finetune.py  gen_schema.py  huggingface_hub.py  llama.py  ocr.py  pdf.py  quantize.py  upload.py
pygptprompt/cli/convert/: fast_to_gguf.py  hf_to_gguf.py  torch_to_gguf.py  transformers.py
pygptprompt/cli/diffusion/: img2img.py  txt2img.py
pygptprompt/cli/dump/: gguf_chat_template.py  gguf_metadata.py  torch.py
pygptprompt/cli/gguf/: convert-hf-to-gguf.py  convert.py
pygptprompt/command/: __init__.py  cd.py  factory.py  feed.py  git.py  help.py  interpreter.py  list.py  process.py  read.py  robots.py  session.py  tree.py  web.py  website.py  webtools.py
pygptprompt/config/: json.py  manager.py  path.py
pygptprompt/context/: chat.py  config.py  policy.py  session.py
pygptprompt/database/: chroma.py  document.py  function.py  registry.py
pygptprompt/function/: chroma.py  factory.py  lazy.py  manager.py  memory.py  read_file.py  sqlite.py  weather.py
pygptprompt/gguf/: __init__.py  constants.py  gguf_reader.py  gguf_writer.py  tensor_mapping.py  vocab.py
pygptprompt/gguf/cli/: chat-template.py  convert-endian.py  convert-hf.py  convert.py  dump.py  metadata-get.py  metadata-set.py  reader.py  writer.py
pygptprompt/gguf/vocab/: bpe.py  factory.py  hf.py  sp.py  special.py
pygptprompt/huggingface/: download.py  upload.py
pygptprompt/huggingface/cli/: hub.py
pygptprompt/introspection/: grammar.py  schema.py
pygptprompt/json/: base.py  list.py  mapping.py  utils.py
pygptprompt/llama_cpp/: interface.py
pygptprompt/model/: base.py  context_manager.py  factory.py  llama_cpp.py  openai.py  transcript_manager.py
pygptprompt/model/llama/: generation.py  model.py  tokenizer.py
pygptprompt/model/sequence/: context_manager.py  sequence_manager.py  session_manager.py  token_manager.py  transcript_manager.py
pygptprompt/openai/: __init__.py  api.py  completions.py  model.py  requests.py
pygptprompt/pattern/: __init__.py  embedding.py  json.py  list.py  logger.py  mapping.py  message.py  model.py  singleton.py  types.py
pygptprompt/processor/: document.py  image.py  pdf.py
pygptprompt/prompt/: __init__.py  format.py
pygptprompt/session/: __init__.py  context.py  manager.py  message.py  model.py  policy.py  proxy.py  queue.py  token.py
pygptprompt/setting/: __init__.py  config.py  contant.py  json.py
pygptprompt/storage/: chroma.py  function.py  sqlite.py
scripts/: gptprompt.sh  llama_code.sh  llama_dl.sh  llama_download.sh  llama_meta.sh  llama_mini.sh
sessions/: gpt-3.5-turbo.history  gpt-3.5-turbo.json
tests/: choice.temp.json  config.dev.json  config.sample.json  conftest.py
tests/unit/: test_api_llama_cpp.py  test_api_openai.py  test_chat_model_factory.py  test_config.py  test_config_json.py  test_config_manager.py  test_model.py  test_model_llama_cpp.py  test_model_openai.py  test_openai.py  test_opencl.py  test_policy.py  test_token.py
tests/unit/config/: test_json.py  test_manager.py  test_path.py
tests/unit/json/: test_base.py  test_list.py  test_utils.py
tests/unit/model/: test_factory.py  test_llama_cpp.py  test_openai.py
tests/unit/pattern/: json.py  list.py  mapping.py  test_mapping.py
(+2 files in other folders)
